--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=8080
-URL=mongodb+srv://expedia:Zaki@7058@cluster0.k60qpkp.mongodb.net/expedia?retryWrites=true&w=majority
+URL=mongodb+srv://expedia:projectexpedia@cluster0.k60qpkp.mongodb.net/expedia?retryWrites=true&w=majority
