--- a/Backend/.env
+++ b/Backend/.env
@@ -5,6 +5,6 @@ SECRET=pall850
 
 
 
-GOOGLE_CLIENT_ID="1062577063357-tg103ca6kgvdf2q2csddqn2frjld74in.apps.googleusercontent.com"
+GOOGLE_CLIENT_ID=1062577063357-tg103ca6kgvdf2q2csddqn2frjld74in.apps.googleusercontent.com
 
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_SECRET=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
